# engine

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/legacy-workflows/: ci.yml  publish.yml
.github/legacy-workflows/build-flatc/: action.yml
examples/: README.md
examples/ipc_agent/: Cargo.toml  README.md  build.rs
examples/ipc_agent/src/: lib.rs
examples/ipc_agent/web_root/: index.html  websocket_example.js
examples/moving_box/: Cargo.toml  README.md
examples/moving_box/src/: lib.rs
examples/text-loading-sample/: Cargo.toml  README.md
examples/text-loading-sample/assets/: hello_world.csv  hello_world.json  hello_world.toml  hello_world.txt
examples/text-loading-sample/src/: lib.rs
examples/texture-loading-minimal-sample/: Cargo.toml  build.rs
examples/texture-loading-minimal-sample/src/: lib.rs
extensions/: README.md
extensions/text_native/: Cargo.toml  build.rs
extensions/text_native/src/: ecs_module.rs  lib.rs
extensions/text_native/src/assets/platform_events/: events.fbs
js/: .gitignore  .npmrc  biome.json  package.json  tsconfig.json
js/scripts/: publish.ts
js/src/: events.fbs  lib.ts
modules/: README.md
modules/animation/: Cargo.toml  README.md  build.rs
modules/animation/src/: lib.rs
modules/editor/: Cargo.toml  README.md  build.rs
modules/editor/src/: aspect_ratio.rs  editor_messages.fbs  lib.rs
modules/editor/src/handlers/: aspect_ratio_handler.rs  handle_if_input_message.rs  mod.rs  ping_handler.rs  process_message.rs  responses.rs  spawn_handler.rs
modules/ipc/: Cargo.toml  README.md  build.rs
modules/ipc/src/: ipc.fbs  lib.rs  systems.rs  websocket_ipc.rs
modules/physics/: Cargo.toml  README.md
modules/physics/src/: components.rs  systems.rs
platform/: README.md
platform/native/: Cargo.toml  README.md
platform/native/src/: lib.rs  main.rs
platform/native_common/: Cargo.toml
platform/native_common/js/: README.md  deno.json
platform/native_common/js/src/: entrypoint.ts  extensions.ts  global.d.ts
platform/native_common/src/: deno_op.rs  ecs_module.rs  js.rs  lib.rs  platform_library.rs  typescript_loader.rs
platform/native_ipc/: Cargo.toml  README.md  build.rs
platform/native_ipc/src/: lib.rs  tooling_messages.fbs
runtime/: README.md
runtime/build_tools/: Cargo.toml
runtime/build_tools/src/: iterator_helper.rs  lib.rs  platform_library.rs  syn_helper.rs
runtime/event/: Cargo.toml  build.rs
runtime/event/src/: events.fbs  lib.rs  serialize.rs
runtime/executor_native/: Cargo.toml
runtime/executor_native/src/: lib.rs
runtime/game_asset/: Cargo.toml  build.rs
runtime/game_asset/events/: text_events.fbs  texture_events.fbs
runtime/game_asset/shaders/shader_templates/: default.fsh  post_processing_default.fsh
runtime/game_asset/shaders/toml_shaders/post_process/: pass_thru.toml
runtime/game_asset/shaders/toml_shaders/standard/: colormap.toml  default_sprite.toml  missing.toml  outline.toml  wiggle.toml
runtime/game_asset/src/: ecs_module.rs  lib.rs  particles.rs  world_render_manager.rs
runtime/game_asset/src/resource_managers/: mod.rs  pipeline_asset_manager.rs  text_asset_manager.rs  texture_asset_manager.rs
runtime/game_asset/src/resource_managers/material_manager/: fixed_size_vec.rs  material_parameters_extension.rs  materials.rs  mod.rs  textures.rs  toml.rs  uniforms.rs
runtime/game_ecs/: Cargo.toml
runtime/game_ecs/src/: archetype.rs  callables.rs  component.rs  cpu_frame_data.rs  lib.rs  system.rs
runtime/game_ecs/src/callables/: serialize.rs
runtime/game_ecs/src/cpu_frame_data/: serialize.rs
runtime/game_ecs/src/system/: serialize.rs
runtime/game_engine/: Cargo.toml
runtime/game_engine/src/: cpu_system.rs  frame_update.rs  include_module_macro.rs  lib.rs  transforms_update.rs
runtime/game_engine/src/c_api/: engine_core.rs  material_manager.rs  mod.rs  pipeline_asset_manager.rs  text_asset_manager.rs  texture_asset_manager.rs
runtime/game_engine/src/frame_update/: serialize.rs
runtime/game_entity/: Cargo.toml
runtime/game_entity/src/: lib.rs  serialize.rs
runtime/game_input_manager/: Cargo.toml
runtime/game_input_manager/src/: binary_writer.rs  lib.rs  serialize.rs
runtime/game_module_macro/: Cargo.toml
runtime/game_module_macro/src/: lib.rs
runtime/game_scene/: Cargo.toml
runtime/game_scene/src/: lib.rs
runtime/game_world/: Cargo.toml
runtime/game_world/src/: lib.rs  serialize.rs
runtime/gpu_common/: Cargo.toml
runtime/gpu_common/src/: lib.rs
runtime/gpu_web/: Cargo.toml  build.rs
runtime/gpu_web/src/: ecs_module.rs  gpu_config.rs  lib.rs  platform_library.rs  render.rs  types_brush.rs  types_shapes2d.rs
runtime/gpu_web/src/assets/platform_events/: events.fbs
runtime/gpu_web/src/assets/shaders/: blit.wgsl  brush.wgsl  draw-particle-trails.wgsl  draw-particles.wgsl  main_bind_group.wgsl
runtime/gpu_web/src/assets/vfx/: explosion.json  red-smoke.json
runtime/gpu_web/src/gpu_managers/: mod.rs  particle_manager.rs  pipeline_manager.rs  texture_manager.rs
runtime/gpu_web/src/render/: draw_list.rs
runtime/platform/: Cargo.toml
runtime/platform/src/: lib.rs
runtime/platform_library_macro/: Cargo.toml
runtime/platform_library_macro/src/: lib.rs
runtime/platform_public/: Cargo.toml
runtime/platform_public/src/: lib.rs
runtime/snapshot/: Cargo.toml
runtime/snapshot/src/: lib.rs  (+1 more)
runtime/snapshot_derive/: Cargo.toml
runtime/snapshot_derive_impl/: Cargo.toml
runtime/void_public/: Cargo.toml
runtime/void_public/src/: callable.rs  colors.rs  coordinate_systems.rs  event.rs  graphics.rs  input.rs  lib.rs  linalg.rs  material.rs  pipeline.rs  serialize.rs  system.rs  text.rs
runtime/void_public_module/: Cargo.toml  build.rs
runtime/void_public_module/src/: lib.rs
tools/: README.md
tools/codegen-rust/: Cargo.toml  README.md
tools/generate_flat_buffers/: Cargo.toml  README.md
tools/ipc_tester/: Cargo.toml  README.md  build.rs
tools/ipc_tester/client/: .gitignore  README.md  index.html  package.json  tooling_ipc_example.ts
tools/ipc_tester/src/: main.rs
(+5 files in other folders)
