[package]
name = "text-loading-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"

game_asset = { path = "../../runtime/game_asset" }
game_module_macro = { path = "../../runtime/game_module_macro" }
gpu_web = { path = "../../runtime/gpu_web" }
snapshot = { path = "../../runtime/snapshot" }
void_public = { path = "../../runtime/void_public" } 

log = "0.4.16"

[build-dependencies]
build_tools = { path = "../../runtime/build_tools" }

[lib]
crate-type = ["cdylib"]
bench = false
