[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
anyhow = "1.0.65"
flatbuffers = "24.3.25"
game_module_macro = { path = "../../runtime/game_module_macro" }
void_public = { path = "../../runtime/void_public" }
log = "0.4.16"
snapshot = { path = "../../runtime/snapshot" }
thiserror = "1.0.43"

[build-dependencies]
build_tools = { path = "../../runtime/build_tools" }
generate-flat-buffers = { path = "../../tools/generate_flat_buffers" }
