[package]
name = "ipc"
version = "0.0.0"
edition = "2021"

[lib]
bench = false

[dependencies]
game_module_macro = { path = "../../runtime/game_module_macro" }
void_public = { path = "../../runtime/void_public" }
snapshot = { path = "../../runtime/snapshot" }

anyhow = "1.0.65"
flatbuffers = "24.3.25"
log = "0.4.16"
tungstenite = "0.26"

[build-dependencies]
build_tools = { path = "../../runtime/build_tools" }
generate-flat-buffers = { path = "../../tools/generate_flat_buffers" }
