[package]
name = "game_input_manager"
version = "0.0.0"
edition = "2024"

[dependencies]
flatbuffers = "24.3.25"
log = "0.4.16"

event = { path = "../event" }
platform = { path = "../platform" }
snapshot = { path = "../snapshot", optional = true }
void_public = { path = "../void_public" }

[features]
default = ["state_snapshots"]
state_snapshots = ["dep:snapshot"]
